tdf#165130 sc: prevent pane's topLeftCell from being in frozen zone

While Excel 2010 opens this unit test just fine
(and looks like a split window)
Excel 2019 complains it is corrupt.

So, this patch just prevents writing an invalid topLeftCell
which will avoid us from causing such a problem
as well as fixing documents that already exhibit the problem.

make CppunitTest_sc_subsequent_export_test2 \
    CPPUNIT_TEST_NAME=testFreezePaneStartCellXLSX

Change-Id: I32888d7d020ec16dca436686cd76008ed417d699
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181275
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins